Ajout du numéro RCS dans les mentions légales

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -58,6 +58,7 @@
                         <strong>Responsable de publication :</strong> Muriel Calzolari<br>
                         <strong>Adresse :</strong> France<br>
                         <strong>Téléphone :</strong> 06 86 18 07 68<br>
+                        <strong>RCS :</strong>388 706 087 R.C.S. Mâcon<br>
                         <strong>Email :</strong> calzolari.muriel@orange.fr
                     </p>
                 </div>
