Améliorations majeures : descriptions MT150/MT200, prix produits, responsive complet du site

--- a/pieces-detachees-2.html
+++ b/pieces-detachees-2.html
@@ -168,7 +168,7 @@
                         <div class="card-content">
                             <h3>Moteur Ventilateur 45W</h3>
                             <p>Refroidissement efficace</p>
-                            <p class="price">Sur demande</p>
+                            <p class="price">46,50 € HT</p>
                             <div class="card-buttons">
                                 <a href="#" class="btn">En savoir plus</a>
                                 <a href="#" class="btn btn-cart">Ajouter au panier</a>
@@ -182,7 +182,7 @@
                         <div class="card-content">
                             <h3>Moteur Ventilateur 70W</h3>
                             <p>Haut débit d'air</p>
-                            <p class="price">Sur demande</p>
+                            <p class="price">49,50 € HT</p>
                             <div class="card-buttons">
                                 <a href="#" class="btn">En savoir plus</a>
                                 <a href="#" class="btn btn-cart">Ajouter au panier</a>
