--- a/pieces-detachees.html
+++ b/pieces-detachees.html
@@ -182,7 +182,7 @@
                         <div class="card-content">
                             <h3>Cache Piston</h3>
                             <p>Protection du mécanisme</p>
-                            <p class="price">Sur demande</p>
+                            <p class="price">4,50 € HT</p>
                             <div class="card-buttons">
                                 <a href="#" class="btn">En savoir plus</a>
                                 <a href="#" class="btn btn-cart">Ajouter au panier</a>
@@ -238,7 +238,7 @@
                         <div class="card-content">
                             <h3>Moteur de Granité</h3>
                             <p>Moteur principal de la machine</p>
-                            <p class="price">Sur demande</p>
+                            <p class="price">113,80 € HT</p>
                             <div class="card-buttons">
                                 <a href="#" class="btn">En savoir plus</a>
                                 <a href="#" class="btn btn-cart">Ajouter au panier</a>
